# QuantTradingDNN

./: CMakeLists.txt
data/: historical_prices.csv
include/: data_loader.h  neural_network.h  tensor.h
include/layers/: activation.h  attention.h  batch_norm.h  conv1d.h  conv2d.h  conv3d.h  dense_activation.h  dropout.h  embedding.h  fully_connected.h  gru.h  layer.h  layer_norm.h  lstm.h  pooling.h  residual.h  trans_conv.h
include/layers/util/: dropout.h  flatten.h  reshape.h
include/utils/: activation_types.h  activations.h  bce_loss.h  math.h  types.h
metal-cmake/: CMakeLists.txt
predictions/: test_labels.csv  test_predictions.csv
src/: CMakeLists.txt  activations.cpp  data_loader.cpp  main.cpp  neural_network.cpp
src/layers/: activation.cpp  attention.cpp  batch_norm.cpp  conv1d.cpp  conv2d.cpp  conv3d.cpp  dense_activation.cpp  dropout.cpp  embedding.cpp  fully_connected.cpp  gru.cpp  layer.cpp  layer_norm.cpp  lstm.cpp  pooling.cpp  residual.cpp  trans_conv.cpp
src/utils/: math.cpp
tests/: CMakeLists.txt  test_data_loader.cpp  test_neural_network.cpp
